@@ -60,6 +60,7 @@ require 'lobbyist/review_withdrawal_request'
 require 'lobbyist/review'
 require 'lobbyist/reviews_count'
 require 'lobbyist/sales_team'
+require 'lobbyist/scheduled_payment'
 require 'lobbyist/smart_invite_setting'
 require 'lobbyist/social_network_profile'
 require 'lobbyist/suggestion_topic'
